--- a/design-principle.html
+++ b/design-principle.html
@@ -43,6 +43,8 @@
             repellat?
           </p>
         </div>
+      </div>
+      <div class="blog-container">
         <div class="content">
           <div class="image">
             <img
