removed id, fixed top spacing -- minor changes

--- a/css.html
+++ b/css.html
@@ -44,7 +44,7 @@
     <div class="blog-container">
       <div class="content">
         <div class="image">
-          <img src="https://bit.ly/39L3CjT" alt="CSS wallpaper" />
+          <img src="https://bit.ly/3iPihPK" alt="CSS wallpaper" />
           <small>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae,
             beatae.</small>
         </div>
