--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
 
       <form class="newsletter">
-        <input type="email" name="email-form" id="email" placeholder="Enter your Email" />
-        <input type="button" value="Subscribe" id="btn" />
+        <input type="email" name="email-form" class="email" placeholder="Enter your Email" />
+        <input type="button" value="Subscribe" class="btn" />
       </form>
       <div class="news-update">
         <div class="confetti"></div>
