worked on responsiveness of the site

--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
         </p>
       </div>
 
-      <form class="newsletter">
-        <input type="email" name="email-form" class="email" placeholder="Enter your Email" />
-        <input type="button" value="Subscribe" class="btn" />
-      </form>
+      <div class="newsletter-container">
+        <form class="newsletter">
+          <input type="email" name="email-form" class="email" placeholder="Enter your Email" />
+          <input type="button" value="Subscribe" class="btn" />
+        </form>
+      </div>
       <div class="news-update">
         <div class="confetti"></div>
-        <div class="joining">
+        <p class="joining">
           Join my newsletter for more Web Develpoment content!
-        </div>
+        </p>
       </div>
     </div>
   </section>
